add challenge subscription
