# docs/swagger.yaml
@@ -1,4 +1,9 @@
 definitions:
+  model.AddUserToChallengeRequest:
+    properties:
+      user_id:
+        type: integer
+    type: object
   model.CreateChallengeRequest:
     properties:
       days:
@@ -57,8 +62,6 @@ definitions:
         type: string
       title:
         type: string
-      user_id:
-        type: integer
     type: object
   ryg-api-gateway_gen_proto_task_service.ChallengeList:
     properties:
@@ -248,6 +251,27 @@ paths:
       summary: Update a challenge by ID
       tags:
       - Challenge
+  /challenges/{challenge_id}/accept:
+    post:
+      consumes:
+      - application/json
+      description: Accept a challenge invitation
+      parameters:
+      - description: Challenge ID
+        in: path
+        name: challenge_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      security:
+      - BearerAuth: []
+      summary: Accept a challenge invitation
+      tags:
+      - Challenge
   /challenges/{challenge_id}/finish:
     post:
       consumes:
@@ -269,6 +293,33 @@ paths:
       security:
       - BearerAuth: []
       summary: Finish a challenge by ID
+      tags:
+      - Challenge
+  /challenges/{challenge_id}/invite:
+    post:
+      consumes:
+      - application/json
+      description: Invite a user to a challenge
+      parameters:
+      - description: Challenge ID
+        in: path
+        name: challenge_id
+        required: true
+        type: integer
+      - description: User ID
+        in: body
+        name: add_user_to_challenge_request
+        required: true
+        schema:
+          $ref: '#/definitions/model.AddUserToChallengeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      security:
+      - BearerAuth: []
+      summary: Invite a user to a challenge
       tags:
       - Challenge
   /challenges/{challenge_id}/start:
@@ -496,6 +547,27 @@ paths:
       summary: Create multiple tasks
       tags:
       - Task
+  /challenges/{challenge_id}/unsubscribe:
+    delete:
+      consumes:
+      - application/json
+      description: Unsubscribe from a challenge
+      parameters:
+      - description: Challenge ID
+        in: path
+        name: challenge_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+      security:
+      - BearerAuth: []
+      summary: Unsubscribe from a challenge
+      tags:
+      - Challenge
   /login:
     post:
       consumes:
